Añadidos esquemas de otros módulos y navegación contextual

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,12 +14,6 @@
 		<ion-header-bar class="dark-bg">
 			<h2>Journal</h2>
 		</ion-header-bar>
-		<ion-content class="has-header">
-			<ion-list>
-				<ion-item nav-clear menu-close ui-sref="app.quests-focus">
-					Dashboard
-				</ion-item>
-			</ion-list>
-		</ion-content>
+		<ion-nav-view name="context-menu"></ion-nav-view>
 	</ion-side-menu>
 </ion-side-menus>
