--- a/www/templates/context-menu.html
+++ b/www/templates/context-menu.html
@@ -2,17 +2,15 @@
 	<ion-content class="stable-background has-expanded-header">
 		<ion-list>
 			<div ng-repeat="entry in mainMenuNav">
-				<ion-item menu-close ui-sref="{{entry.go}}">
+				<ion-item class="transp-bg clear-color line-decoration" menu-close ui-sref="{{entry.go}}">
 					{{entry.name}}
 				</ion-item>
-				<div ng-if="entry.go.startsWith(currentContext)">
-					<div style="width:100%; height:10px; background-color:red"></div>
+				<div ng-if="entry.go.startsWith(currentContext)" class="context-menu">
 					<div ng-repeat="entry in contextMenu">
-						<ion-item nav-clear menu-close ui-sref="{{entry.go}}">
+						<ion-item class="transp-bg clear-color line-decoration" menu-close ui-sref="{{entry.go}}">
 							{{entry.name}}
 						</ion-item>
 					</div>
-					<div style="width:100%; height:10px; background-color:red"></div>
 				</div>
 			</div>
 		</ion-list>
