--- a/www/templates/quests/focus.html
+++ b/www/templates/quests/focus.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Focus">
 	<ion-content>
-		<h1>Focus</h1>
+		<div class="hero quest-log-focus">
+			<div class="content assassins-creed-titles">
+				<h2>Focus</h2>
+			</div>
+		</div>
+		<div class="separator theme"></div>
 	</ion-content>
 </ion-view>
