--- a/www/templates/quests/main.html
+++ b/www/templates/quests/main.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Quests">
 	<ion-content>
-		<h1>Quests</h1>
+		<div class="hero quest-log-overview">
+			<div class="content assassins-creed-titles">
+				<h2>Quests</h2>
+			</div>
+			<button class="button button-fab button-fab-bottom-right button-right-second"></button>
+			<button class="button button-fab button-fab-bottom-right"></button>
+		</div>
+		<div class="separator theme"></div>
 	</ion-content>
 </ion-view>
