--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3953,14 +3953,14 @@ a.subdued {
     .bar.bar-calm.bar-footer {
       background-image: linear-gradient(180deg, #0a9dc7, #0a9dc7 50%, transparent 50%); }
   .bar.bar-assertive {
-    border-color: #8b1515;
-    background-color: #b71c1c;
-    background-image: linear-gradient(0deg, #8b1515, #8b1515 50%, transparent 50%);
+    border-color: black;
+    background-color: #001314;
+    background-image: linear-gradient(0deg, black, black 50%, transparent 50%);
     color: #fff; }
     .bar.bar-assertive .title {
       color: #fff; }
     .bar.bar-assertive.bar-footer {
-      background-image: linear-gradient(180deg, #8b1515, #8b1515 50%, transparent 50%); }
+      background-image: linear-gradient(180deg, black, black 50%, transparent 50%); }
   .bar.bar-balanced {
     border-color: #28a54c;
     background-color: #33cd5f;
@@ -4174,13 +4174,13 @@ a.subdued {
 
 .bar-assertive .button {
   border-color: transparent;
-  background-color: #b71c1c;
+  background-color: #001314;
   color: #fff; }
   .bar-assertive .button:hover {
     color: #fff;
     text-decoration: none; }
   .bar-assertive .button.active, .bar-assertive .button.activated {
-    background-color: #8b1515; }
+    background-color: black; }
   .bar-assertive .button.button-clear {
     border-color: transparent;
     background: none;
@@ -4412,14 +4412,14 @@ a.subdued {
 
 .tabs-assertive > .tabs,
 .tabs.tabs-assertive {
-  border-color: #8b1515;
-  background-color: #B71C1C;
-  background-image: linear-gradient(0deg, #8b1515, #8b1515 50%, transparent 50%);
+  border-color: black;
+  background-color: #001314;
+  background-image: linear-gradient(0deg, black, black 50%, transparent 50%);
   color: #fff; }
   .tabs-assertive > .tabs .tab-item .badge,
   .tabs.tabs-assertive .tab-item .badge {
     background-color: #fff;
-    color: #B71C1C; }
+    color: #001314; }
 
 .tabs-balanced > .tabs,
 .tabs.tabs-balanced {
@@ -4554,7 +4554,7 @@ a.subdued {
   top: 4%; }
 
 .tabs-striped.tabs-assertive .tabs {
-  background-color: #B71C1C; }
+  background-color: #001314; }
 
 .tabs-striped.tabs-assertive .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4660,7 +4660,7 @@ a.subdued {
   background-image: none; }
 
 .tabs-striped.tabs-background-assertive .tabs {
-  background-color: #B71C1C;
+  background-color: #001314;
   background-image: none; }
 
 .tabs-striped.tabs-background-balanced .tabs {
@@ -4736,14 +4736,14 @@ a.subdued {
       opacity: 1; }
 
 .tabs-striped.tabs-color-assertive .tab-item {
-  color: rgba(183, 28, 28, 0.4);
+  color: rgba(0, 19, 20, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-assertive .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-assertive .tab-item.tab-item-active, .tabs-striped.tabs-color-assertive .tab-item.active, .tabs-striped.tabs-color-assertive .tab-item.activated {
     margin-top: -2px;
-    color: #B71C1C;
-    border: 0 solid #B71C1C;
+    color: #001314;
+    border: 0 solid #001314;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-assertive .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-assertive .tab-item.active .badge, .tabs-striped.tabs-color-assertive .tab-item.activated .badge {
       top: 2px;
@@ -4831,9 +4831,9 @@ a.subdued {
 
 .tabs-background-assertive .tabs,
 .tabs-background-assertive > .tabs {
-  background-color: #B71C1C;
-  background-image: linear-gradient(0deg, #8b1515, #8b1515 50%, transparent 50%);
-  border-color: #8b1515; }
+  background-color: #001314;
+  background-image: linear-gradient(0deg, black, black 50%, transparent 50%);
+  border-color: black; }
 
 .tabs-background-balanced .tabs,
 .tabs-background-balanced > .tabs {
@@ -4904,13 +4904,13 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-assertive .tab-item {
-  color: rgba(183, 28, 28, 0.4);
+  color: rgba(0, 19, 20, 0.4);
   opacity: 1; }
   .tabs-color-assertive .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-assertive .tab-item.tab-item-active, .tabs-color-assertive .tab-item.active, .tabs-color-assertive .tab-item.activated {
-    color: #B71C1C;
-    border: 0 solid #B71C1C; }
+    color: #001314;
+    border: 0 solid #001314; }
     .tabs-color-assertive .tab-item.tab-item-active .badge, .tabs-color-assertive .tab-item.active .badge, .tabs-color-assertive .tab-item.activated .badge {
       opacity: 1; }
 
@@ -4997,11 +4997,11 @@ ion-tabs.tabs-striped.tabs-color-active-calm .tab-item.tab-item-active, ion-tabs
 ion-tabs.tabs-color-active-assertive .tab-item {
   color: #444; }
   ion-tabs.tabs-color-active-assertive .tab-item.tab-item-active, ion-tabs.tabs-color-active-assertive .tab-item.active, ion-tabs.tabs-color-active-assertive .tab-item.activated {
-    color: #B71C1C; }
+    color: #001314; }
 
 ion-tabs.tabs-striped.tabs-color-active-assertive .tab-item.tab-item-active, ion-tabs.tabs-striped.tabs-color-active-assertive .tab-item.active, ion-tabs.tabs-striped.tabs-color-active-assertive .tab-item.activated {
-  border-color: #B71C1C;
-  color: #B71C1C; }
+  border-color: #001314;
+  color: #001314; }
 
 ion-tabs.tabs-color-active-balanced .tab-item {
   color: #444; }
@@ -5203,7 +5203,7 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   .tab-item.tab-item-active.tab-item-assertive,
   .tab-item.active.tab-item-assertive,
   .tab-item.activated.tab-item-assertive {
-    color: #B71C1C; }
+    color: #001314; }
   .tab-item.tab-item-active.tab-item-balanced,
   .tab-item.active.tab-item-balanced,
   .tab-item.activated.tab-item-balanced {
@@ -5750,8 +5750,8 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
     background-color: #11c1f3;
     color: #fff; }
   .item.item-assertive {
-    border-color: #8b1515;
-    background-color: #B71C1C;
+    border-color: black;
+    background-color: #001314;
     color: #fff; }
   .item.item-balanced {
     border-color: #28a54c;
@@ -5862,16 +5862,16 @@ ion-tabs.tabs-striped.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs
   .item-complex.activated .item-content.item-assertive,
   .item .item-content.active.item-assertive,
   .item .item-content.activated.item-assertive {
-    border-color: #8b1515;
-    background-color: #8b1515; }
+    border-color: black;
+    background-color: black; }
     .item.active.item-assertive.item-complex > .item-content,
     .item.activated.item-assertive.item-complex > .item-content,
     .item-complex.active .item-content.item-assertive.item-complex > .item-content,
     .item-complex.activated .item-content.item-assertive.item-complex > .item-content,
     .item .item-content.active.item-assertive.item-complex > .item-content,
     .item .item-content.activated.item-assertive.item-complex > .item-content {
-      border-color: #8b1515;
-      background-color: #8b1515; }
+      border-color: black;
+      background-color: black; }
   .item.active.item-balanced,
   .item.activated.item-balanced,
   .item-complex.active .item-content.item-balanced,
@@ -6067,15 +6067,15 @@ a.item-content {
       background-color: #0a9dc7; }
 
 .item-complex.item-assertive > .item-content {
-  border-color: #8b1515;
-  background-color: #B71C1C;
+  border-color: black;
+  background-color: #001314;
   color: #fff; }
   .item-complex.item-assertive > .item-content.active, .item-complex.item-assertive > .item-content:active {
-    border-color: #8b1515;
-    background-color: #8b1515; }
+    border-color: black;
+    background-color: black; }
     .item-complex.item-assertive > .item-content.active.item-complex > .item-content, .item-complex.item-assertive > .item-content:active.item-complex > .item-content {
-      border-color: #8b1515;
-      background-color: #8b1515; }
+      border-color: black;
+      background-color: black; }
 
 .item-complex.item-balanced > .item-content {
   border-color: #28a54c;
@@ -6499,7 +6499,7 @@ button.item.item-button-right {
   transition-delay: 125ms; }
 
 .item-delete .button.icon {
-  color: #B71C1C;
+  color: #001314;
   font-size: 24px; }
   .item-delete .button.icon:hover {
     opacity: .7; }
@@ -6735,7 +6735,7 @@ button.item.item-button-right {
 
 .tabs .tab-item .badge.badge-assertive,
 .badge.badge-assertive {
-  background-color: #B71C1C;
+  background-color: #001314;
   color: #fff; }
 
 .tabs .tab-item .badge.badge-balanced,
@@ -7448,8 +7448,8 @@ ion-slides {
     stroke: #33cd5f;
     fill: #33cd5f; }
   .spinner.spinner-assertive {
-    stroke: #B71C1C;
-    fill: #B71C1C; }
+    stroke: #001314;
+    fill: #001314; }
   .spinner.spinner-energized {
     stroke: #ffc900;
     fill: #ffc900; }
@@ -7490,7 +7490,7 @@ ion-slides {
   stop-color: #33cd5f; }
 
 .spinner-spiral.spinner-assertive .stop2 {
-  stop-color: #B71C1C; }
+  stop-color: #001314; }
 
 .spinner-spiral.spinner-energized .stop2 {
   stop-color: #ffc900; }
@@ -7883,12 +7883,12 @@ input[type="checkbox"][readonly] {
 
 .checkbox-assertive input:before,
 .checkbox-assertive .checkbox-icon:before {
-  border-color: #B71C1C; }
+  border-color: #001314; }
 
 .checkbox-assertive input:checked:before,
 .checkbox-assertive input:checked + .checkbox-icon:before {
-  background: #B71C1C;
-  border-color: #B71C1C; }
+  background: #001314;
+  border-color: #001314; }
 
 .checkbox-balanced input:before,
 .checkbox-balanced .checkbox-icon:before {
@@ -8079,8 +8079,8 @@ input:checked + .checkbox-icon:after {
   background-color: #11c1f3; }
 
 .toggle.toggle-assertive input:checked + .track {
-  border-color: #B71C1C;
-  background-color: #B71C1C; }
+  border-color: #001314;
+  background-color: #001314; }
 
 .toggle.toggle-balanced input:checked + .track {
   border-color: #33cd5f;
@@ -8221,10 +8221,10 @@ input:checked + .checkbox-icon:after {
   background-color: #11c1f3; }
 
 .toggle-small .toggle-assertive input:checked + .track {
-  background-color: rgba(183, 28, 28, 0.5); }
+  background-color: rgba(0, 19, 20, 0.5); }
 
 .toggle-small .toggle-assertive input:checked + .track .handle {
-  background-color: #B71C1C; }
+  background-color: #001314; }
 
 .toggle-small .toggle-balanced input:checked + .track {
   background-color: rgba(51, 205, 95, 0.5); }
@@ -8396,9 +8396,9 @@ input:checked + .checkbox-icon:after {
   .range.range-balanced input::-ms-fill-lower {
     background: #33cd5f; }
   .range.range-assertive input::-webkit-slider-thumb:before {
-    background: #B71C1C; }
+    background: #001314; }
   .range.range-assertive input::-ms-fill-lower {
-    background: #B71C1C; }
+    background: #001314; }
   .range.range-energized input::-webkit-slider-thumb:before {
     background: #ffc900; }
   .range.range-energized input::-ms-fill-lower {
@@ -8516,7 +8516,7 @@ input:checked + .checkbox-icon:after {
   .item-select.item-calm:after, .item-select.item-calm .input-label {
     color: #fff; }
   .item-select.item-assertive select {
-    background: #B71C1C;
+    background: #001314;
     color: #fff; }
   .item-select.item-assertive:after, .item-select.item-assertive .input-label {
     color: #fff; }
@@ -8711,27 +8711,27 @@ progress {
         color: #fff; }
   .button.button-assertive {
     border-color: transparent;
-    background-color: #B71C1C;
+    background-color: #001314;
     color: #fff; }
     .button.button-assertive:hover {
       color: #fff;
       text-decoration: none; }
     .button.button-assertive.active, .button.button-assertive.activated {
-      background-color: #8b1515; }
+      background-color: black; }
     .button.button-assertive.button-clear {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #B71C1C; }
+      color: #001314; }
     .button.button-assertive.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-assertive.button-outline {
-      border-color: #B71C1C;
+      border-color: #001314;
       background: transparent;
-      color: #B71C1C; }
+      color: #001314; }
       .button.button-assertive.button-outline.active, .button.button-assertive.button-outline.activated {
-        background-color: #B71C1C;
+        background-color: #001314;
         box-shadow: none;
         color: #fff; }
   .button.button-balanced {
@@ -8981,7 +8981,7 @@ a.button {
   .button-bar.bar-calm > .button {
     border-color: #0a9dc7; }
   .button-bar.bar-assertive > .button {
-    border-color: #8b1515; }
+    border-color: black; }
   .button-bar.bar-balanced > .button {
     border-color: #28a54c; }
   .button-bar.bar-energized > .button {
@@ -9501,13 +9501,13 @@ a.button {
   border-color: #0a9dc7; }
 
 .assertive, a.assertive {
-  color: #B71C1C; }
+  color: #001314; }
 
 .assertive-bg {
-  background-color: #B71C1C; }
+  background-color: #001314; }
 
 .assertive-border {
-  border-color: #8b1515; }
+  border-color: black; }
 
 .balanced, a.balanced {
   color: #33cd5f; }
@@ -9790,4 +9790,4 @@ a.button {
   transition-duration: 0s; }
 
 .assertive-separator {
-  background-color: #B71C1C; }
+  background-color: #001314; }
