--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -8,7 +8,7 @@ $positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #33cd5f !default;
 $energized:                       #ffc900 !default;
-$assertive:                       #B71C1C !default;
+$assertive:                       #001314 !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 
