--- a/www/templates/codex/main.html
+++ b/www/templates/codex/main.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Codex">
 	<ion-content>
-		<h1>Codex</h1>
+		<div class="hero codex-main">
+			<div class="content assassins-creed-titles">
+				<h2>Codex</h2>
+			</div>
+		</div>
+		<button class="button button-fab button-fab-bottom-right button-right-second"></button>
+		<button class="button button-fab button-fab-bottom-right"></button>
+		<div class="separator theme"></div>
 	</ion-content>
 </ion-view>
