--- a/www/templates/journal/main.html
+++ b/www/templates/journal/main.html
@@ -1,10 +1,11 @@
-<ion-view view-title="{{title}}">
+<ion-view view-title="Journal">
 	<ion-content>
-		<div class="hero quest-log-listings">
+		<div class="hero journal-main">
 			<div class="content assassins-creed-titles">
-				<h2>{{title}}</h2>
+				<h2>Journal</h2>
 			</div>
 		</div>
+		<button class="button button-fab button-fab-bottom-right button-right-second"></button>
 		<button class="button button-fab button-fab-bottom-right"></button>
 		<div class="separator theme"></div>
 	</ion-content>
