--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="true" class="journal-menu">
+<ion-side-menus enable-menu-with-back-views="true" class="journal-app">
 	<ion-side-menu-content>
 		<ion-nav-bar class="bar-assertive" ng-class="{expanded: isExpanded}" align-title="center">
 			<ion-nav-back-button class="no-text">
