--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,6 +20,7 @@
 
 .bar.journal-menu-bar {
 	border-style: none;
+	padding:0;
 }
 
 .transp-bg, .bar.transp-bg {
@@ -49,6 +50,11 @@
     background-color: #440E0E !important;
 }
 
+#player-data {
+	padding:0;
+	background-color: #440E0E !important;	
+}
+
 .context-menu {
 	padding-left: 1em;
 }
@@ -64,17 +70,17 @@
 }
 
 .bar.bar-header.expanded, .expanded .bar.bar-header {
-	height: 225px;
+	height: 225px!important;
 }
 
 .bar.bar-header h1, .bar.bar-header h2, .bar.bar-header h3, 
 .bar.bar-header h4, .bar.bar-header h5, .bar.bar-header h6 {
 	color: white;
+	background-color: transparent;
 }
 
 .bar.bar-header h5 {
 	font-style: italic;
-	color: #;
 }
 
 .has-expanded-header {
