--- a/www/css/style.css
+++ b/www/css/style.css
@@ -133,3 +133,34 @@
 	background-image: url('../img/journal.png');
 }
 /*** END: JOURNAL MAIN ***/
+
+/*** DASHBOARD ***/
+.dashboard .tile-frame {
+	padding: 5px;
+}
+
+.dashboard figure {
+	position: relative;
+	padding-top: 100%;
+	background-color: white;
+	overflow: hidden;
+}
+
+.dashboard figure img {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	margin-left: -100%;
+	height: 100%;
+}
+
+.dashboard figure figcaption {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 4px;
+	color: white;
+	min-width: 100%;
+}
+/*** FIN: DASHBOARD ***/
