--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,7 @@
 
 	<ion-side-menu side="right">
 		<ion-header-bar class="transp-bg expanded journal-menu-bar">
-			<div id="player-data" class="full-block center ptop2">
+			<div id="player-data" class="full-block center mtop2">
 				<img src="img/profile-avatar.png" class="profile-avatar-menu"/>
 				<h4>Mizhal</h4>
 				<h5>Assassin</h5>
