--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,17 @@
 .button-right-second {
 	right: 88px!important;
 }
+
+.separator1 {
+	background-image: url("../img/separator1.png");
+	background-size: 100%;
+	min-width: 100%;
+	height: 10px;
+}
+
+.right {
+	float: right;
+}
 /*** END: COMMON MIXINS **/
 
 /*** MENU **/
@@ -111,6 +122,27 @@
     display: inline-block;
     color: white;
     font-size: 2.5em;
+}
+
+.quest-log-overview h3, .quest-log-overview .item h3 {
+	margin: 0;
+	font-size: 16pt;
+	background-color: white;
+	padding: 0.3em 1em;
+	min-width: 100%;
+}
+
+.quest-log-overview h3 a, .quest-log-overview .item h3 a {
+	color: black;
+}
+
+.quest-log-overview ion-item.item {
+	padding: 0;
+	margin: 0;
+}
+
+.quest-log-overview h3 i.icon {
+	margin-right: 0.2em;
 }
 /*** END: QUEST LOG OVERVIEW **/
 
