--- a/www/templates/quests/main.html
+++ b/www/templates/quests/main.html
@@ -4,7 +4,7 @@
 			<div class="content assassins-creed-titles">
 				<h2>Quests</h2>
 			</div>
-			<button class="button button-energized button-fab button-fab-bottom-right button-right-second"><i class="icon ion-plus"></i></button>
+			<button class="button button-energized button-fab button-fab-bottom-right button-right-second" ui-sref="app.quests.edit"><i class="icon ion-plus"></i></button>
 			<button class="button button-energized button-fab button-fab-bottom-right"><i class="icon ion-stats-bars"></i></button>
 		</div>
 		<section class="quests">
