--- a/www/css/style.css
+++ b/www/css/style.css
@@ -200,3 +200,34 @@
 	min-width: 100%;
 }
 /*** FIN: DASHBOARD ***/
+
+/** FORMS **/
+.form input::-webkit-input-placeholder, 
+.form textarea::-webkit-input-placeholder {
+	color: #000;
+	font-size: 12pt;
+}
+
+.form button.wide {
+	width: 100%;
+
+	border-radius: 3px;
+	border: 0;
+	box-shadow: 1px 1px 1px #000;
+	padding: 10px 0;
+
+	color: #fff;
+	background-color: #440E0E;
+}
+
+.form button.decorated {
+	border-radius: 3px;
+	border: 0;
+	box-shadow: 1px 1px 1px #000;
+
+	padding: 10px 25px;
+
+	color: #fff;
+	background-color: #440E0E;	
+}
+/** END: FORMS **/
