--- a/www/css/style.css
+++ b/www/css/style.css
@@ -230,4 +230,9 @@
 	color: #fff;
 	background-color: #440E0E;	
 }
+
+.form .form-errors {
+	font-size: 9pt;
+	color: #ff0000;
+}
 /** END: FORMS **/
