--- a/www/templates/quests/focus.html
+++ b/www/templates/quests/focus.html
@@ -6,5 +6,10 @@
 			</div>
 		</div>
 		<div class="separator theme"></div>
+		<section class="quests">
+			<div class="quest item" ng-repeat="q in focus">
+				<h3><i class="icon ion-ios-clock"></i> {{q.name}} <a ui-sref="app.quests.edit({id:q._id})"><i class="icon right ion-ios-play"></i></a></h3>
+			</div>
+		</section>
 	</ion-content>
 </ion-view>
