--- a/www/templates/quests/listing.html
+++ b/www/templates/quests/listing.html
@@ -7,5 +7,10 @@
 		</div>
 		<button class="button button-fab button-fab-bottom-right"></button>
 		<div class="separator theme"></div>
+		<section class="quests">
+			<div class="quest item" ng-repeat="q in quests">
+				<h3><i class="icon ion-ios-clock"></i> {{q.name}} <a ui-sref="app.quests.edit({id:q._id})"><i class="icon right ion-ios-play"></i></a></h3>
+			</div>
+		</section>
 	</ion-content>
 </ion-view>
