fix separator & title

--- a/www/templates/quests/detail.html
+++ b/www/templates/quests/detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{quest.name}}">
+<ion-view view-title="{{title}}">
 	<ion-content>
 		<article class="quest">
 			<div class="hero quest-log-listings">
