--- a/www/templates/quests/focus.html
+++ b/www/templates/quests/focus.html
@@ -5,7 +5,7 @@
 				<h2>Focus</h2>
 			</div>
 		</div>
-		<div class="separator theme"></div>
+		<div class="separator1 theme"></div>
 		<section class="quests">
 			<div class="quest item" ng-repeat="q in focus">
 				<h3><i class="icon ion-ios-clock"></i> {{q.name}} <a ui-sref="app.quests.detail({id:q._id})"><i class="icon right ion-ios-play"></i></a></h3>
