no quests message

--- a/www/templates/quests/main.html
+++ b/www/templates/quests/main.html
@@ -23,6 +23,9 @@
 			<div class="quest item" ng-repeat="q in quest_log.focus">
 				<h4><i class="icon ion-play"></i> {{q.name}} <a ui-sref="app.quests.detail({id:q._id})"><i class="icon right ion-ios-play"></i></a></h4>
 			</div>
+			<div class="quest item" ng-if="quest_log.focus.length == 0">
+				<h4> No quests </h4>
+			</div>
 		</section>
 
 		<section class="quests" ng-if="quest_log.n_open > 0">
@@ -30,7 +33,7 @@
 			<h3><i class="icon ion-ios-pie"></i> Open <span>({{quest_log.n_open}})</span> <a ui-sref="app.quests.listings({status:'OPEN'})"><i class="icon right ion-ios-play"></i></a></h3>
 			<div class="separator1"></div>
 			<div class="quest item" ng-repeat="q in quest_log.open">
-				<h4><i class="icon ion-ios-clock"></i> {{q.name}} <a ui-sref="app.quests.detail({id:q._id})"><i class="icon right ion-ios-play"></i></a></h4>
+				<h4><i class="icon ion-ios-pie"></i> {{q.name}} <a ui-sref="app.quests.detail({id:q._id})"><i class="icon right ion-ios-play"></i></a></h4>
 			</div>
 		</section>
 
