--- a/www/templates/quests/detail.html
+++ b/www/templates/quests/detail.html
@@ -11,7 +11,7 @@
 					<i class="icon ion-checkmark-circled"></i>
 				</button>
 				<button class="button button-energized button-fab button-fab-bottom-right"
-					ng.click="addEntry()">
+					ng-click="addEntry()">
 					<i class="icon ion-chatboxes"></i>
 				</button>
 			</div>
