#10 guardar entradas diario, fix conexion dos BDs, resolver quest antes de cargar vista, no cachear vistas

--- a/www/templates/journal/edit.html
+++ b/www/templates/journal/edit.html
@@ -12,7 +12,7 @@
                         from: <input type="text" ng-model="quest.name" readonly/>
                     </label>
                     <label class="item item-input">
-                        <textarea placeholder="Write something" ng-bind-html="entry.text" 
+                        <textarea placeholder="Write something" ng-model="entry.text" 
                             rows="15" required>
                         </textarea>
                     </label>
