--- a/www/templates/quests/listing.html
+++ b/www/templates/quests/listing.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{title}}">
+<ion-view view-title="{{title}}" cache-view="false">
 	<ion-content>
 		<div class="hero quest-log-listings">
 			<div class="content assassins-creed-titles">
