--- a/www/templates/quests/main.html
+++ b/www/templates/quests/main.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Quests" class="quest-log-overview">
+<ion-view view-title="Quests" class="quest-log-overview" cache-view="false">
 	<ion-content>
 		<div class="hero quest-log-overview">
 			<div class="content assassins-creed-titles">
