--- a/www/templates/quests/focus.html
+++ b/www/templates/quests/focus.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Focus">
+<ion-view view-title="Focus" cache-view="false">
 	<ion-content>
 		<div class="hero quest-log-focus">
 			<div class="content assassins-creed-titles">
